--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
           <div role="main">
             <div class="section">
               
-                <p><img alt="logo" src="/img/logo.png" /></p>
+                <p align="center">
+![logo](/img/logo.png)
+</p>
+
 <h2 id="who-are-we">Who Are We 我们是谁</h2>
 <p>CoV Relief is a Canadian-registered not-for-profit organization. Our goal is to provide help, support and relief for the victims, infected people and affected residents of COVID-19 (Wuhan Coronavirus) outbreak.</p>
 <p>CoV Relief 是一家在加拿大注册成立的非营利慈善组织。我们的目标是为 COVID-19（武汉冠状病毒）疫情的受害者、感染者和受影响的民众提供帮助与救济。尽可能给更多群众提供卫生健康环境，防止疫情扩散。</p>
@@ -178,5 +181,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-02-20 06:43:27
+Build Date UTC : 2020-02-20 06:46:05
 -->
