--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="section">
               
                 <p align="center">
-![logo](/img/logo.png)
+  <img src="/img/logo.png">
 </p>
 
 <h2 id="who-are-we">Who Are We 我们是谁</h2>
@@ -181,5 +181,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-02-20 06:46:05
+Build Date UTC : 2020-02-20 06:48:09
 -->
